--- a/components.json
+++ b/components.json
@@ -2,7 +2,7 @@
   "$schema": "https://ui.shadcn.com/schema.json",
   "style": "new-york",
   "rsc": true,
-  "tsx": false,
+  "tsx": true,
   "tailwind": {
     "config": "",
     "css": "src/app/globals.css",
@@ -12,11 +12,11 @@
   },
   "iconLibrary": "lucide",
   "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils",
-    "ui": "@/components/ui",
-    "lib": "@/lib",
-    "hooks": "@/hooks"
+    "components": "@/modules/shared/components",
+    "utils": "@/modules/shared/utils",
+    "ui": "@/modules/shared/components/ui",
+    "lib": "@/modules/shared/lib",
+    "hooks": "@/modules/shared/hooks"
   },
   "registries": {}
 }
